Implement changes from PR.
