# observatory-platform/observatory/platform/api/app/elastic.py
@@ -10,22 +10,31 @@ http://0.0.0.0:5000/query?agg=country&subset=collaborations&api_key=158f9f48b674
 """
 import os
 import time
-from datetime import datetime
-from typing import Tuple, Union
+from typing import Tuple, Union, List
 
 from elasticsearch import Elasticsearch
 from flask import current_app
 from flask import request
 
 
-def create_es_connection(address: str, username: str, password: str) -> Union[Elasticsearch, None]:
-    for value in [address, username, password]:
+def create_es_connection(address: str, api_key: str) -> Union[Elasticsearch, None]:
+    for value in [address, api_key]:
         if value is None or value == '':
             return None
-    es = Elasticsearch(address, http_auth=(username, password))
+    es = Elasticsearch(address, api_key=api_key)
     if not es.ping():
-        raise ConnectionError("Could not connect to elasticsearch server. Url, username or password might be invalid.")
+        raise ConnectionError("Could not connect to elasticsearch server. Host and/or api_key are not empty, "
+                              "but might be invalid.")
     return es
+
+
+def list_available_index_dates(es: Elasticsearch, alias: str) -> List[str]:
+    available_dates = []
+    available_indices = es.cat.indices(alias, format='json')
+    for index in available_indices:
+        index_date = index['index'][-8:]
+        available_dates.append(index_date)
+    return available_dates
 
 
 def create_search_body_search_after(from_year: str, to_year: str, filter_fields: dict, size: int, pit_id: str,
@@ -131,21 +140,6 @@ def create_search_body(from_year: Union[str, None], to_year: Union[str, None], f
     }
     return search_body
 
-
-def validate_dates(from_date: str, to_date: str) -> Tuple[str, str]:
-    dates = []
-    for date_text in [from_date, to_date]:
-        if date_text:
-            try:
-                datetime.strptime(date_text, '%Y')
-            except ValueError:
-                raise ValueError("Incorrect data format, should be YYYY")
-            dates.append(f"{date_text}-12-31")
-        else:
-            dates.append(None)
-    return dates[0], dates[1]
-
-
 def process_response(res: dict) -> Tuple[str, list]:
     scroll_id = res['_scroll_id']
     # flatten nested dictionary '_source'
@@ -237,9 +231,10 @@ def create_schema():
 #
 #     return results
 
-def parse_args() -> Tuple[str, str, str, dict, int, str]:
+def parse_args() -> Tuple[str, str, str, str, dict, int, str]:
     agg = request.args.get('agg')
     subset = request.args.get('subset')
+    index_date = request.args.get('index_date')
     from_date = request.args.get('from')
     to_date = request.args.get('to')
     limit = request.args.get('limit')
@@ -255,14 +250,15 @@ def parse_args() -> Tuple[str, str, str, dict, int, str]:
             value = value.split(',')
         filter_fields[field] = value
 
-    from_date, to_date = validate_dates(from_date, to_date)
+    from_date = from_date + '-12-31' if from_date else None
+    to_date = to_date + '-12-31' if to_date else None
 
     # TODO determine which combinations/indices we can use
     if agg == 'author' or agg == 'funder':
         agg += '_test'
     if agg == 'publisher' and subset == 'collaborations':
-        return '', '', '', {}, 0, ''
-    index = f"{subset}-{agg}-20201205"
+        return '', '', '', '', {}, 0, ''
+    alias = f"{subset}-{agg}"
 
     max_size = 10000
     if limit:
@@ -271,23 +267,34 @@ def parse_args() -> Tuple[str, str, str, dict, int, str]:
     else:
         size = max_size
 
-    return index, from_date, to_date, filter_fields, size, scroll_id
+    return alias, index_date, from_date, to_date, filter_fields, size, scroll_id
 
 
 def search():
     start = time.time()
 
-    index, from_date, to_date, filter_fields, size, scroll_id = parse_args()
-    if index == '':
+    alias, index_date, from_date, to_date, filter_fields, size, scroll_id = parse_args()
+    if alias == '':
         return "Invalid combination of aggregation (publisher) and subset (collaborations)", 400
     search_body = create_search_body(from_date, to_date, filter_fields, size)
 
-    es_username = os.environ.get('ES_USERNAME')
-    es_password = os.environ.get('ES_PASSWORD')
-    es_address = os.environ.get('ES_ADDRESS')
-    es = create_es_connection(es_address, es_username, es_password)
+    es_api_key = os.environ.get('ES_API_KEY')
+    es_address = os.environ.get('ES_HOST')
+    es = create_es_connection(es_address, es_api_key)
     if es is None:
-        return "Elasticsearch environment variable for address, username and/or password is empty", 400
+        return "Elasticsearch environment variable for host or api key is empty", 400
+
+    # use specific index if date is given, otherwise use alias which points to latest date
+    if index_date:
+        index = alias + f"-{index_date}"
+        index_exists = es.indices.exists(index)
+        if not index_exists:
+            available_dates = list_available_index_dates(es, alias)
+            return f"Index does not exist: {index}\n Available dates for this agg & subset:\n" \
+                   f"{chr(10).join(available_dates)}", 400
+    else:
+        index = es.cat.aliases(alias, format='json')[0]['index']
+
     if scroll_id:
         res = es.scroll(scroll_id=scroll_id, scroll='1m')
     else:
@@ -296,17 +303,12 @@ def search():
 
     number_total_results = res['hits']['total']['value']
 
-    # while hits:
-    #     if len(all_results) > limit:
-    #         break
-    #     res = es.scroll(scroll_id=scroll_id, scroll='1s')
-    #     scroll_id, hits = process_response(res)
-    #     all_results += hits
 
     end = time.time()
     print(end - start)
     schema = create_schema()
     results = {
+        'index': index,
         'scroll_id': scroll_id,
         'returned_hits': len(results_data),
         'total_hits': number_total_results,
