# observatory-platform/observatory/platform/api/app/openapi.yml
@@ -20,7 +20,7 @@ info:
 paths:
   /query:
     get:
-#      operationId: api.query.search
+      operationId: elastic.search
       tags:
         - Query
       summary: Perform an elasticsearch search query
@@ -53,19 +53,25 @@ paths:
             - output-types
             - publishers
           type: string
+        - name: index_date
+          in: query
+          description: Index date, defaults to latest
+          required: false
+          format: date
+          type: string
+          pattern: '^\d{4}\d{2}\d{2}$'
         - name: from
           in: query
-          description: Start date (included)
+          description: Start date (included), format YYYY
           required: false
-#          format: date
-#          minLength: 0
-#          maxLength: 10
-          type: integer
+          type: string
+          pattern: '^\d{4}$'
         - name: to
           in: query
-          description: End date (not included)
+          description: End date (not included), format YYYY
           required: false
-          type: integer
+          type: string
+          pattern: '^\d{4}$'
         - name: limit
           in: query
           description: Limit number of results (max 10000)
@@ -106,6 +112,9 @@ paths:
           schema:
             type: object
             properties:
+              index:
+                type: string
+                description: The full name of the elasticsearch index that is searched
               scroll_id:
                 type: string
                 description: The scroll id that can be used to get the next batch of results (only active for 1min)
